manifests/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels: 
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: selaworkshops/voting-app-worker
        name: worker
