manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: webapp 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp 
    spec:
      containers:
        - name: webapp
          image: k8sregistery.azurecr.io/appimg
          ports:
          - containerPort: 80


---

kind: Service
apiVersion: v1
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
    - port: 5678
      targertPort: 80
